Refactor code to add missing Javadoc comments and add a new ActorLevelUp class to represent the level up animation.